# bevy-water-melon

./: Cargo.toml
src/: fruits.rs  lib.rs  main.rs
